--- a/index.html
+++ b/index.html
@@ -1,3 +1,27 @@
-Hello world, added some changes later.
-Just to be sure.
-3.2.1.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>We welcome you</title>
+    <meta name="description" content="This page is created to support our visitors">
+</head>
+<body>
+
+    <header>
+        <h1>We welcome you</h1>
+    </header>
+
+    <section>
+        <h2>Description</h2>
+        <p>This page is created to support our visitors.</p>
+    </section>
+
+    <section>
+        <h2>Contact</h2>
+        <p>Email: <a href="mailto:nick.oliinyk@gmail.com">nick.oliinyk@gmail.com</a></p>
+        <p>Phone: +380 97 219 9099</p>
+    </section>
+
+</body>
+</html>
