--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <script type="text/javascript">
             
         function notifyAccessTokenFailed() {
-            window.JavaScriptInterface.accessTokenFailed();
+            JavaScriptInterface.accessTokenFailed()
         }
 
         function accessTokenAccepted(token) {
-            alert("Hello! I am an alert box!");
+            alert("Hello! I am an alert box!")
         }
             
     </script>
